--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,14 @@
     <head>
         <meta charset="utf-8">
         <title>WebSockets 101</title>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js"></script>
+        <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js"></script> -->
+        <script src="/socket.io/socket.io.js"></script>
         <link href="/styles.css" rel="stylesheet" />
     </head>
     <body>
 
         <div id="mario-chat">
-            <h2>Mario Chat</h2>
+            <h2>ULL-DSI Chat</h2>
             <div id="chat-window">
                 <div id="output"></div>
                 <div id="feedback"></div>
