--- a/public/index.html
+++ b/public/index.html
@@ -9,15 +9,15 @@
     </head>
     <body>
 
-        <div id="mario-chat">
-            <h2>ULL-DSI Chat</h2>
-            <div id="chat-window">
-                <div id="output"></div>
-                <div id="feedback"></div>
-            </div>
-            <input id="handle" type="text" placeholder="Handle" />
-            <input id="message" type="text" placeholder="Message" />
-            <button id="send">Send</button>
+        <div id="dsi-chat">
+           <h2>ULL-DSI Chat</h2>
+           <div id="chat-window">
+               <div id="output"></div>
+               <div id="feedback"></div>
+           </div>
+           <input id="handle" type="text" placeholder="Handle" />
+           <input id="message" type="text" placeholder="Message" />
+           <button id="send">Send</button>
         </div>
 
 
